--- a/app/package.json
+++ b/app/package.json
@@ -14,12 +14,12 @@
     "react-dom": "19.2.3"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/node": "25.0.10",
+    "@types/react": "19.2.9",
+    "@types/react-dom": "19.2.3",
     "babel-plugin-react-compiler": "1.0.0",
-    "eslint": "^9",
+    "eslint": "9.39.2",
     "eslint-config-next": "16.1.4",
-    "typescript": "^5"
+    "typescript": "5.9.3"
   }
 }
