--- a/app/package.json
+++ b/app/package.json
@@ -20,6 +20,7 @@
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "9.39.2",
     "eslint-config-next": "16.1.4",
-    "typescript": "5.9.3"
+    "typescript": "5.9.3",
+    "vitest": "4.0.18"
   }
 }
