--- a/app/package.json
+++ b/app/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "test": "vitest ."
   },
   "dependencies": {
     "next": "16.1.4",
@@ -14,13 +15,18 @@
     "react-dom": "19.2.3"
   },
   "devDependencies": {
+    "@testing-library/dom": "10.4.1",
+    "@testing-library/react": "16.3.2",
     "@types/node": "25.0.10",
     "@types/react": "19.2.9",
     "@types/react-dom": "19.2.3",
+    "@vitejs/plugin-react": "^5.1.2",
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "9.39.2",
     "eslint-config-next": "16.1.4",
+    "jsdom": "27.4.0",
     "typescript": "5.9.3",
+    "vite-tsconfig-paths": "6.0.5",
     "vitest": "4.0.18"
   }
 }
