--- a/.github/workflows/test-nextjs-app.yaml
+++ b/.github/workflows/test-nextjs-app.yaml
@@ -3,8 +3,9 @@ permissions:
   contents: read
 
 on:
-  push:
-    branches: [main]
+  pull_request:
+    paths:
+      - app/**
   workflow_dispatch:
 
 # Cancel any currently running builds to save GitHub Actions hours.
