Add missing working-directory references

--- a/.github/workflows/build-and-deploy-nextjs-app.yaml
+++ b/.github/workflows/build-and-deploy-nextjs-app.yaml
@@ -39,6 +39,7 @@ jobs:
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
+        working-directory: ./app
         with:
           # Automatically inject basePath in your Next.js configuration file and disable
           # server side image optimization (https://nextjs.org/docs/api-reference/next/image#unoptimized).
@@ -47,12 +48,15 @@ jobs:
           static_site_generator: next
 
       - name: Install dependencies
+        working-directory: ./app
         run: npm install
 
       - name: Build with Next.js
+        working-directory: ./app
         run: npm run build
 
       - name: Upload artifact
+        working-directory: ./app
         uses: actions/upload-pages-artifact@v3
         with:
           path: ./out
