Use upload-pages-artifact@v4, set path

--- a/.github/workflows/build-and-deploy-nextjs-app.yaml
+++ b/.github/workflows/build-and-deploy-nextjs-app.yaml
@@ -55,10 +55,9 @@ jobs:
         run: npm run build
 
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
-        working-directory: ./app
+        uses: actions/upload-pages-artifact@v4
         with:
-          path: ./out
+          path: ./app/.next/static
 
   deploy:
     environment:
