Create .nojekyll in output directory after build

--- a/.github/workflows/build-and-deploy-nextjs-app.yaml
+++ b/.github/workflows/build-and-deploy-nextjs-app.yaml
@@ -54,6 +54,10 @@ jobs:
         working-directory: ./app
         run: npm run build
 
+      - name: Create .nojekyll file in build output directory
+        working-directory: ./app/out
+        run: touch .nojekyll
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v4
         with:
