Run build without .nojekyll step

--- a/.github/workflows/build-and-deploy-nextjs-app.yaml
+++ b/.github/workflows/build-and-deploy-nextjs-app.yaml
@@ -71,9 +71,10 @@ jobs:
         working-directory: ./app
         run: npm run build
 
-      - name: Create .nojekyll file in build output directory
-        working-directory: ./app/out
-        run: touch .nojekyll
+      # See: https://github.blog/news-insights/the-library/bypassing-jekyll-on-github-pages/
+      # - name: Create .nojekyll file in build output directory
+      #   working-directory: ./app/out
+      #   run: touch .nojekyll
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v4
