--- a/.github/workflows/build-and-deploy-nextjs-app.yaml
+++ b/.github/workflows/build-and-deploy-nextjs-app.yaml
@@ -44,7 +44,7 @@ jobs:
           # server side image optimization (https://nextjs.org/docs/api-reference/next/image#unoptimized).
           #
           # You may remove this line if you want to manage the configuration yourself.
-          static_site_generator: next
+          # static_site_generator: next
 
       - name: Install dependencies
         working-directory: ./app
@@ -70,11 +70,6 @@ jobs:
       - name: Build with Next.js
         working-directory: ./app
         run: npm run build
-
-      # See: https://github.blog/news-insights/the-library/bypassing-jekyll-on-github-pages/
-      # - name: Create .nojekyll file in build output directory
-      #   working-directory: ./app/out
-      #   run: touch .nojekyll
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v4
