Add packageManager field to package.json for caching in actions/setup-node

--- a/app/package.json
+++ b/app/package.json
@@ -30,5 +30,6 @@
     "typescript": "5.9.3",
     "vite-tsconfig-paths": "6.0.5",
     "vitest": "4.0.18"
-  }
+  },
+  "packageManager": "npm@11.8.0"
 }
