--- a/app/package.json
+++ b/app/package.json
@@ -18,14 +18,14 @@
   "devDependencies": {
     "@testing-library/dom": "10.4.1",
     "@testing-library/react": "16.3.2",
-    "@types/node": "25.0.10",
-    "@types/react": "19.2.9",
+    "@types/node": "25.2.1",
+    "@types/react": "19.2.13",
     "@types/react-dom": "19.2.3",
-    "@vitejs/plugin-react": "^5.1.2",
+    "@vitejs/plugin-react": "5.1.3",
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "9.39.2",
-    "eslint-config-next": "16.1.4",
-    "jsdom": "27.4.0",
+    "eslint-config-next": "16.1.6",
+    "jsdom": "28.0.0",
     "prettier": "3.8.1",
     "typescript": "5.9.3",
     "vite-tsconfig-paths": "6.0.5",
